--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <h1>Bem Vindos ao meu site!</h1>
+    <hr>
     <p>Este é um site feito e hospedado no Github</p>
     <p>HTML> não é a linguagem de programação!!!</p>
+    <hr>
 </body>
