--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Bem Vindos ao meu site!</h1>
     <hr>
     <p>Este é um site feito e hospedado no Github</p>
-    <p>HTML> não é a linguagem de programação!!!</p>
+    <p>HTML não é a linguagem de programação!!!</p>
     <hr>
+    <a href="https://www.google.com" target="_blank">Google</a>
 </body>
