--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
     <p>HTML não é a linguagem de programação!!!</p>
     <hr>
     <a href="https://www.google.com" target="_blank">Google</a>
+    <img src="img/raposa.jpg">
 </body>
