--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
     <hr>
     <a href="https://www.google.com" target="_blank">Google</a>
     <img src="img/raposa.jpg">
+    <img alt="Uma raposa no pantanal relaxando" src="img/raposa.jpg"
 </body>
