--- a/index.html
+++ b/index.html
@@ -11,6 +11,5 @@
     <p>HTML não é a linguagem de programação!!!</p>
     <hr>
     <a href="https://www.google.com" target="_blank">Google</a>
-    <img alt="Uma raposa no pantanal relaxando" src="img/raposa.jpg" class="roundimg">
+    <img alt="img/Uma raposa no pantanal relaxando" src="img/raposa.jpg" class="roundimg">
 </body>
-
